--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Crop image</h1>
+		<h1>Canvas Crop image</h1>
 		<h3>1 first upload image</h3>
 		<h3>2 click crop btn</h3>
 		<div id="zone"></div>
